# rust-axum-template

./: README.md  setup.sh
template/: .env-dist  .gitignore  DEVELOPMENT.md  Justfile  README.md
template/.github/workflows/: release.yml  rust.yml
template/PROJECT/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.binary
template/PROJECT/.cargo/: audit.toml
template/PROJECT/migrations/: 0001_init.sql
template/PROJECT/src/: cli.rs  errors.rs  main.rs  middleware.rs  models.rs  prelude.rs  routes.rs  server.rs
template/PROJECT/src/models/: ids.rs  todo.rs  user.rs
template/PROJECT/src/routes/: hello.rs  user.rs  whoami.rs
