[package]
name = "${APP}"
description = "${APP} is a CLI tool"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/${GIT_USERNAME}/${APP}"
homepage = "https://github.com/${GIT_USERNAME}/${APP}"
license = "MIT"
keywords = []
categories = ["command-line-utilities"]
readme = "README.md"
documentation = "https://docs.rs/${APP}"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["multipart"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.17", features = ["env"] }
clap_complete = "4.5.29"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
mime = "0.3.17"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "fs", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
shell-words = "1.1.0"
